# terrarium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.mjs
.claude/commands/: release.md
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-02-18-tsx-viewer-design.md  2026-02-18-tsx-viewer-implementation.md  2026-02-19-fix-double-window-cold-start-design.md  2026-02-19-fix-double-window-plan.md  2026-02-19-fix-finder-file-open-design.md  2026-02-19-hot-reload-integration-test-design.md  2026-02-20-fix-cold-start-dupe-window-v2-design.md  2026-02-20-fix-cold-start-dupe-window-v2-plan.md  2026-02-20-plant-file-history-design.md  2026-02-20-plant-file-history-plan.md  2026-03-04-commit-lint-changelog-design.md  2026-03-04-commit-lint-changelog-plan.md  2026-03-07-artifact-storage-design.md  (+1 more)
examples/: avatar.tsx  clock.tsx  counter.tsx  gradient.tsx  progress.tsx  storage-test.tsx  toggle.tsx
homebrew/: terrarium.rb
scripts/: update-homebrew-sha.sh
site/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
site/app/: globals.css  (+4 more)
src/: index.html  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: bundler.mjs  package-lock.json  package.json  storage-shim.js
src-tauri/src/: bundler.rs  lib.rs  main.rs  recent.rs  storage.rs  watcher.rs
src-tauri/tests/: bundler_test.rs  hot_reload_test.rs  recent_test.rs
tests/: bundler.test.mjs  renderer.test.mjs
(+33 files in other folders)
