[package]
name = "terrarium"
version = "0.2.2"
description = "A tiny terrarium for your TSX components"
authors = ["Michelle Mayes"]
edition = "2021"

[lib]
name = "terrarium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
log = "0.4"
dirs = "6"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
tokio-test = "0.4"
